a11y: with caret navigation enabled, accessibility current page is cursor page

https://bugzilla.gnome.org/show_bug.cgi?id=711862